[package]
name = "origo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"

[dev-dependencies]
fake = "2.5"
rand = "0.8"

[[example]]
name = "server"

