[package]
name = "origo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rustc-hash = "1.1.0"

[dev-dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }

[[example]]
name = "server"

