[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
env_logger = "0.10.0"
rustc-hash = "1.1.0"
origo = { path = "../origo" }
bincode = "2.0.0-rc.3"